# research-project

./: .gitignore  README.md  bumpver.toml  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py  pre_prompt.py
research-project-comprehensive/: cookiecutter.json
research-project-comprehensive/hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
research-project-comprehensive/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml  setup.py
research-project-comprehensive/{{cookiecutter.project_slug}}/code/: README.md
research-project-comprehensive/{{cookiecutter.project_slug}}/code/Rscripts/: {{cookiecutter.project_slug}}.R
research-project-comprehensive/{{cookiecutter.project_slug}}/code/configs/: config.toml  private_config.toml
research-project-comprehensive/{{cookiecutter.project_slug}}/code/notebooks/: {{cookiecutter.project_slug}}.ipynb
research-project-comprehensive/{{cookiecutter.project_slug}}/code/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
research-project-comprehensive/{{cookiecutter.project_slug}}/code/{{cookiecutter.project_slug}}/: __init__.py  configs.py  main.py  template.py
research-project-comprehensive/{{cookiecutter.project_slug}}/code/{{cookiecutter.project_slug}}/modeling/: glm.py
research-project-comprehensive/{{cookiecutter.project_slug}}/data/: README.md  participants.json
research-project-comprehensive/{{cookiecutter.project_slug}}/literature/: PUBLICATION_1.bib  PUBLICATION_2.bib  {{cookiecutter.project_slug}}.bib
research-project-comprehensive/{{cookiecutter.project_slug}}/organisation/: README.md
research-project-lite/: cookiecutter.json
research-project-lite/hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
research-project-lite/{{cookiecutter.project_slug}}/: README.md
research-project-lite/{{cookiecutter.project_slug}}/code/: README.md
research-project-lite/{{cookiecutter.project_slug}}/code/{{cookiecutter.project_slug}}/: template.py
research-project-lite/{{cookiecutter.project_slug}}/organisation/: README.md
research-project-lite/{{cookiecutter.project_slug}}/results/: README.md
research-project-no-python/: cookiecutter.json
research-project-no-python/hooks/: post_gen_project.py  pre_gen_project.py
research-project-no-python/{{cookiecutter.project_slug}}/: README.md
research-project-no-python/{{cookiecutter.project_slug}}/code/: README.md
research-project-no-python/{{cookiecutter.project_slug}}/code/Rscripts/: configs.R
research-project-no-python/{{cookiecutter.project_slug}}/code/configs/: config.toml  private_config.toml
research-project-no-python/{{cookiecutter.project_slug}}/data/: README.md
research-project-no-python/{{cookiecutter.project_slug}}/literature/: PUBLICATION_1.bib  {{cookiecutter.project_slug}}.bib
research-project-no-python/{{cookiecutter.project_slug}}/organisation/: README.md
research-project-no-python/{{cookiecutter.project_slug}}/results/: README.md
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/code/: README.md  README_code.md
{{cookiecutter.project_slug}}/code/Rscripts/: {{cookiecutter.project_slug}}.R
{{cookiecutter.project_slug}}/code/configs/: config.toml  private_config.toml
{{cookiecutter.project_slug}}/code/notebooks/: {{cookiecutter.project_slug}}.ipynb
{{cookiecutter.project_slug}}/code/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/code/{{cookiecutter.project_slug}}/: configs.py  main.py  template.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/code/{{cookiecutter.project_slug}}/datavisualization/: plot_image.py
{{cookiecutter.project_slug}}/code/{{cookiecutter.project_slug}}/modelling/: glm.py
{{cookiecutter.project_slug}}/code/{{cookiecutter.project_slug}}/preprocessing/: freesurfer.py
{{cookiecutter.project_slug}}/data/: README.md  dataset_description.json  participants.tsv
{{cookiecutter.project_slug}}/literature/: PUBLICATION_1.bib  PUBLICATION_2.bib  {{cookiecutter.project_slug}}.bib
{{cookiecutter.project_slug}}/organisation/: README_organisation.md
{{cookiecutter.project_slug}}/results/: README_results.md
