[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "Run and analyse the {{ cookiecutter.project_name }} study ({% now 'local', '%Y' %})"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
license = {name = "{{ cookiecutter.open_source_license }}", file = "LICENSE"}
keywords = ["very", "great", "study"]
authors = [
  {email = "{{ cookiecutter.email }}"},
  {name = "{{ cookiecutter.full_name }}"}
]
maintainers = [
  {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"}
]
classifiers = [
  "Intended Audience :: Researchers",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: {{ cookiecutter.python_version.split('.')[0] }}",
  "Programming Language :: Python :: {{ cookiecutter.python_version }}"
]

dependencies = [
    "numpy",
    "pandas",
    "toml>=0.10",
]

[project.optional-dependencies]
test = [
    "flake8",
    "tox>=3.25.1",
    "pytest",
    "pytest-cov[all]",
    "mypy",
]

[project.urls]
homepage = "https://www.{{ cookiecutter.project_slug }}.org"  # TODO: change to actual homepage
documentation = "https://peps.python.org/pep-0621/"  # TODO: change to actual documentation
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"  # TODO: change to actual repository
changelog = "https://github.com//{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/CHANGELOG.md"

# For command line interface (CLI)
# [project.scripts]
# {{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.{{ cookiecutter.project_slug }}:main"

[tool.setuptools]
platforms = ["unix", "linux", "osx", "cygwin", "win32"]
zip-safe = false

# # To automatically find the package(s) (Beta feature (Oct, 2022)):
[tool.setuptools.packages.find]
where = ["code"]
include = ["{{ cookiecutter.project_slug }}"]
exclude = ["tests"]

# Include non-python files in the package
# [options.package_data]
# {{ cookiecutter.project_slug }} = ["*.txt", "*.rst"]

# Exclude specific non-python files in the package
# [tool.setuptools.exclude-package-data]
# {{ cookiecutter.project_slug }} = [".gitattributes"]

[tool.flake8]
max-line-length = 119

# ALL ABOVE IS ADAPTATION OF THE FORMER setup.cfg
# ALL BELOW WAS ALREADY PART OF pyproject.toml [Oct, 2022]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
#addopts = "--cov={{ cookiecutter.project_slug }}"
testpaths = [
    "code/tests",
]

[tool.mypy]
mypy_path = "code"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.coverage.run]
data_file = "code/tests/.coverage"

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "code/tests/coverage_html_report"
